--- a/world-force/style.css
+++ b/world-force/style.css
@@ -4,9 +4,29 @@ body {
   text-align: center;
   background-image: url("https://www.ashlynnpai.com/assets/nasa-min.jpg");
   background-size: cover;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .chart {
   margin-top: 100px;
   background: rgba(0, 0, 0, 0.7);
+}
+
+div.tooltip {
+  position: absolute;
+  text-align: left;
+  width: 80px;
+  height: 20px;
+  padding: 10px;
+  font-size: 14px;
+  font-weight: bold;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none;
+  top: -35%;
+  left: 135%;
+  transform: translateX(10%);
+  margin-top: -10px;
 }
